FirstGitProj/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Activity_Monitor__c</fullName>
        <formula>IF( Days_Since_Last_Activity__c &lt;180, 
IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;Less than 90 Days&quot;,40,40) , 
IF( Days_Since_Last_Activity__c &lt;365, 
IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;90 to 365 Days&quot;,40,40), 
IF( Days_Since_Last_Activity__c &gt;365, 
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than a Year&quot;,40,40) , 
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 60 Days&quot;,40,40))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Monitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>today() -  DATEVALUE( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>